[gd_scene load_steps=5 format=3 uid="uid://bbjq5ktr6w55r"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_i83lh"]
[ext_resource type="Texture2D" uid="uid://dv4qi3dbs6wx3" path="res://DIODE.svg" id="2_v8y28"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qlqx2"]
bg_color = Color(0.321569, 0.211765, 0.501961, 0.952941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lhdls"]
bg_color = Color(0.278431, 0.603922, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_i83lh")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -15.0
offset_right = -8.0
offset_bottom = 115.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qlqx2")

[node name="settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -113.0
offset_top = 12.0
offset_right = -23.0
offset_bottom = 103.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 60
text = "‚öôÔ∏è"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -344.0
offset_top = 20.0
offset_right = 212.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.866667, 0.854902, 0.968627, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Google Sheets FlashCard App"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 245.0
offset_top = -657.0
offset_right = 507.0
offset_bottom = -111.0
text = "autoload for saving settings
main page
settings page
---auth
---spreedsheets
---sheets
---saved score
generalized flashcards page
---time
---buttons for correctness
results page
---option to overwrite score
dimensionality page
---choose order/# of card faces

new features:
make incorrect answer repeat
-remove unnecessary buttons
reverse order option
only use the last x cards
-make it look nicer?"

[node name="Diode" type="Sprite2D" parent="."]
visible = false
position = Vector2(60, 56.5)
scale = Vector2(0.06875, 0.065625)
texture = ExtResource("2_v8y28")

[node name="loading" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -44.0
offset_right = 125.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lhdls")

[node name="Label" type="Label" parent="loading"]
layout_mode = 0
offset_left = 8.0
offset_top = 15.0
offset_right = 244.0
offset_bottom = 73.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "‚è≥ Loading..."

[node name="Tree" type="Tree" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = 217.0
offset_right = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
scroll_horizontal_enabled = false

[node name="debug" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0

[node name="flipCardButton" type="Button" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 133.0
offset_right = 89.0
offset_bottom = 204.0
theme_override_font_sizes/font_size = 45
text = "üîÑ"

[node name="repeatIncorrectButton" type="Button" parent="."]
layout_mode = 0
offset_left = 98.0
offset_top = 133.0
offset_right = 168.0
offset_bottom = 204.0
theme_override_font_sizes/font_size = 45
text = "üîÇ"

[node name="TextEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 190.0
offset_top = 167.0
offset_right = 364.0
offset_bottom = 203.0
theme_override_font_sizes/font_size = 20
placeholder_text = "change #"

[node name="lastcardsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 190.0
offset_top = 135.0
offset_right = 362.0
offset_bottom = 158.0
text = "bottom 100 cards used"

[node name="flipCardLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 398.0
offset_top = 136.0
offset_right = 631.0
offset_bottom = 162.0
text = "flip cards in opposite order"

[node name="repeatIncorrectCardsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 399.0
offset_top = 172.0
offset_right = 632.0
offset_bottom = 198.0
text = "repeat incorrect cards"

[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="flipCardButton" to="." method="_on_flip_card_button_pressed"]
[connection signal="pressed" from="repeatIncorrectButton" to="." method="_on_repeat_incorrect_button_pressed"]
[connection signal="text_submitted" from="TextEdit" to="." method="_on_text_edit_text_submitted"]
